# schoolvf

./: .gitignore  README.md  SETUP_WINDOWS.bat  START.bat  STOP.bat  mediamtx.yml  pyproject.toml  sample.txt
apps/: __init__.py
apps/api/: requirements.txt
apps/api/app/: deps.py  identity.py  main.py  password_util.py  routes.py  routes_auth.py  routes_cameras.py  routes_internal.py  routes_live.py  routes_users.py  routes_vehicles.py  rtsp_probe.py  schemas.py  settings.py
apps/api/app/db/: __init__.py  cameras.py  models.py  seed.py  session.py
apps/api/app/services/: trip_pipeline.py
apps/dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/dashboard/src/: App.tsx  main.tsx
apps/dashboard/src/api/: alerts.ts  auth.ts  cameras.ts  client.ts  corrections.ts  dashboard.ts  events.ts  index.ts  (+5 more)
apps/vision-worker/: __init__.py  requirements.txt
apps/vision-worker/app/: __init__.py  draw_overlay.py  main.py  multi_camera.py  pipeline.py  plate_detection.py  plate_engine.py  sample_stack.py  settings.py  webcam_capture.py
apps/vision_worker/: __init__.py
infra/db/: init.sql
infra/docker/: .env.example  Dockerfile.api  Dockerfile.dashboard  Dockerfile.vision  Dockerfile.vision.cuda  docker-compose.yml
infra/nginx/: dashboard.conf  nginx.conf
infra/prometheus/: prometheus.yml
scripts/: list_opencv_cameras.py  run_vision_worker_native.bat  run_vision_worker_native.sh
scripts/dev/: rebuild-vision-worker.sh  start-all.bat  start-all.ps1  start-all.sh  start-vision-native.sh  stop-all.ps1
(+23 files in other folders)
